--- a/app/projects/watch320/app.cbp
+++ b/app/projects/watch320/app.cbp
@@ -46,6 +46,20 @@
 			<Add directory="../../platform/bsp/bsp_sensor/internal_sensor" />
 			<Add directory="../../platform/gui/ctp/axs5106" />
 			<Add directory="functions/common" />
+			<Add directory="../../platform/bsp/bsp_sensor/vcc30fx" />
+			<Add directory="../../../ute/project_config" />
+			<Add directory="../../../ute/application" />
+			<Add directory="../../../ute/drv/screen" />
+			<Add directory="../../../ute/flashmap" />
+			<Add directory="../../../ute/module/filesystem" />
+			<Add directory="../../../ute/module/log" />
+			<Add directory="../../../ute/module/message" />
+			<Add directory="../../../ute/module/platform" />
+			<Add directory="../../../ute/module/systemtime" />
+			<Add directory="../../../ute/task" />
+			<Add directory="../../../ute/thrid_lib/little_fs" />
+			<Add directory="../../../ute/module/profile" />
+			<Add directory="../../../ute/module/protocol" />
 		</Compiler>
 		<Linker>
 			<Add option="-T$(TARGET_OBJECT_DIR)ram.o" />
@@ -67,6 +81,9 @@
 			<Add library="../../platform/libs/libgcc.a" />
 			<Add library="../../platform/libs/libc.a" />
 			<Add library="../../platform/libs/libm.a" />
+			<Add library="../../platform/bsp/bsp_sensor/vcc30fx/lib_BIODetect_V141_codeBlock_Riscv_01.a" />
+			<Add library="../../platform/bsp/bsp_sensor/vcc30fx/lib_hr_vH102ed02_ZKLXRISCV32V2_NA_01.a" />
+			<Add library="../../platform/bsp/bsp_sensor/vcc30fx/lib_spo2_VC30FS_Int_ZhongKe5681_01.a" />
 			<Add directory="../../platform/libs" />
 		</Linker>
 		<ExtraCommands>
@@ -74,6 +91,60 @@
 			<Add after="Output\bin\postbuild.bat $(PROJECT_NAME)" />
 		</ExtraCommands>
 		<Unit filename="../../../libs/gui/spiflash/spiflash.h" />
+		<Unit filename="../../../ute/application/ute_application_common.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/application/ute_application_common.h" />
+		<Unit filename="../../../ute/drv/screen/ute_drv_screen_common.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/drv/screen/ute_drv_screen_common.h" />
+		<Unit filename="../../../ute/drv/screen/ute_drv_tft_s240x284_i18_st7789p3_xhl183ba2401.h" />
+		<Unit filename="../../../ute/drv/screen/ute_drv_tft_s240x284_nv3030b_hy201068avc.h" />
+		<Unit filename="../../../ute/flashmap/ute_flash_64mbit_1024k_map.h" />
+		<Unit filename="../../../ute/flashmap/ute_flash_map_common.h" />
+		<Unit filename="../../../ute/module/filesystem/ute_module_filesystem.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/filesystem/ute_module_filesystem.h" />
+		<Unit filename="../../../ute/module/log/ute_module_log.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/log/ute_module_log.h" />
+		<Unit filename="../../../ute/module/message/ute_module_message.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/message/ute_module_message.h" />
+		<Unit filename="../../../ute/module/platform/ute_module_platform.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/platform/ute_module_platform.h" />
+		<Unit filename="../../../ute/module/profile/ute_module_profile_ble.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/profile/ute_module_profile_ble.h" />
+		<Unit filename="../../../ute/module/protocol/ute_module_protocol.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/protocol/ute_module_protocol.h" />
+		<Unit filename="../../../ute/module/systemtime/ute_module_systemtime.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/systemtime/ute_module_systemtime.h" />
+		<Unit filename="../../../ute/project_config/ute_project_config.h" />
+		<Unit filename="../../../ute/project_config/ute_project_config_ab281.h" />
+		<Unit filename="../../../ute/task/ute_task_application.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/task/ute_task_application.h" />
+		<Unit filename="../../../ute/thrid_lib/little_fs/lfs.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/thrid_lib/little_fs/lfs.h" />
+		<Unit filename="../../../ute/thrid_lib/little_fs/lfs_util.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/thrid_lib/little_fs/lfs_util.h" />
 		<Unit filename="../../platform/bsp/bsp.h" />
 		<Unit filename="../../platform/bsp/bsp_app/ab_command/ab_common.c">
 			<Option compilerVar="CC" />
@@ -386,6 +457,31 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../platform/bsp/bsp_sensor/sc7a20/sl_watch_application.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/BIODetect_V14_1.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/StressEst.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/algo.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/spo2Algo_16bit.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_core.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_core.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_core_com.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_driver.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_driver.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_driver_com.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_driver_config.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_original_data_send.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_sample_result.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_user_app.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vc30fx_user_app.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vcSportMotionIntAlgo.h" />
+		<Unit filename="../../platform/bsp/bsp_sensor/vcc30fx/vcare_device_com.h" />
 		<Unit filename="../../platform/bsp/bsp_sleep.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -559,10 +655,16 @@
 		<Unit filename="../../platform/gui/tft/tft_240_jd9853.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="../../platform/gui/tft/tft_240_nv3030b.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../../platform/gui/tft/tft_240_st7789.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../platform/gui/tft/tft_240_st7789w3.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../platform/gui/tft/tft_320_385_gc9b71.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../platform/gui/tft/tft_320_st77916.c">
@@ -1056,10 +1158,6 @@
 		<Unit filename="ui.h" />
 		<Unit filename="ui_external.h" />
 		<Unit filename="xcfg.h" />
-		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
-		</Extensions>
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
