--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -861,6 +861,12 @@
 		<Unit filename="functions/func_breathe.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_breathe_sub_mode.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="functions/func_breathe_sub_time.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_bt.c">
 			<Option compilerVar="CC" />
 		</Unit>
