添加压力界面 、长按滑动关机界面

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -965,6 +965,9 @@
 		<Unit filename="functions/func_light.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_long_press.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_map.c">
 			<Option compilerVar="CC" />
 		</Unit>
