--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -66,6 +66,8 @@
 			<Add directory="../../../ute/drv/motor" />
 			<Add directory="../../../ute/module/notify" />
 			<Add directory="../../../ute/module/charencode" />
+			<Add directory="../../../ute/module/notdisturb" />
+			<Add directory="../../../ute/module/weather" />
 		</Compiler>
 		<Linker>
 			<Add option="-T$(TARGET_OBJECT_DIR)ram.o" />
@@ -141,6 +143,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../../ute/module/message/ute_module_message.h" />
+		<Unit filename="../../../ute/module/notdisturb/ute_module_notdisturb.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/notdisturb/ute_module_notdisturb.h" />
 		<Unit filename="../../../ute/module/notify/ute_module_notify.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -161,6 +167,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../../ute/module/systemtime/ute_module_systemtime.h" />
+		<Unit filename="../../../ute/module/weather/ute_module_weather.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/weather/ute_module_weather.h" />
 		<Unit filename="../../../ute/project_config/ute_project_config.h" />
 		<Unit filename="../../../ute/project_config/ute_project_config_ab281.h" />
 		<Unit filename="../../../ute/task/ute_task_application.c">
