--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -70,6 +70,7 @@
 			<Add directory="../../../ute/module/weather" />
 			<Add directory="../../../ute/module/crc" />
 			<Add directory="../../../ute/module/heart" />
+			<Add directory="../../../ute/module/bloodoxygen" />
 		</Compiler>
 		<Linker>
 			<Add option="-T$(TARGET_OBJECT_DIR)ram.o" />
@@ -98,8 +99,8 @@
 		</Linker>
 		<ExtraCommands>
 			<Add before="Output\bin\prebuild.bat $(PROJECT_NAME)" />
-			<Add before="..\..\..\tools\AStyle\copy.bat" />
 			<Add after="Output\bin\postbuild.bat $(PROJECT_NAME)" />
+			<Add after="..\..\..\tools\AStyle\copy.bat" />
 		</ExtraCommands>
 		<Unit filename="../../../libs/gui/spiflash/spiflash.h" />
 		<Unit filename="../../../ute/application/ute_application_common.c">
@@ -118,6 +119,10 @@
 		<Unit filename="../../../ute/drv/screen/ute_drv_tft_s240x284_nv3030b_hy201068avc.h" />
 		<Unit filename="../../../ute/flashmap/ute_flash_64mbit_1024k_map.h" />
 		<Unit filename="../../../ute/flashmap/ute_flash_map_common.h" />
+		<Unit filename="../../../ute/module/bloodoxygen/ute_module_bloodoxygen.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/bloodoxygen/ute_module_bloodoxygen.h" />
 		<Unit filename="../../../ute/module/call/ute_module_call.c">
 			<Option compilerVar="CC" />
 		</Unit>
