--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -76,6 +76,8 @@
 			<Add directory="../../../ute/module/sleep" />
 			<Add directory="../../../ute/module/sport" />
 			<Add directory="../../../ute/drv/gsensor" />
+			<Add directory="../../../ute/language" />
+			<Add directory="../../../ute/language/defaultLanguage" />
 		</Compiler>
 		<Linker>
 			<Add option="-T$(TARGET_OBJECT_DIR)ram.o" />
@@ -138,6 +140,17 @@
 		<Unit filename="../../../ute/drv/screen/ute_drv_tft_s240x284_nv3030b_hy201068avc.h" />
 		<Unit filename="../../../ute/flashmap/ute_flash_64mbit_1024k_map.h" />
 		<Unit filename="../../../ute/flashmap/ute_flash_map_common.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_en_rus.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_zh_rcn.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/language/ute_language_common.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/language/ute_language_common.h" />
 		<Unit filename="../../../ute/module/bloodoxygen/ute_module_bloodoxygen.c">
 			<Option compilerVar="CC" />
 		</Unit>
