1、增加士兰微gsensor异常处理 2、修改心率血氧自动测量默认时长 3、关闭心率电源时拉低心率iic管脚

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -101,9 +101,9 @@
 			<Add library="../../platform/bsp/bsp_sensor/vcc30fx/lib_BIODetect_V141_codeBlock_Riscv_01.a" />
 			<Add library="../../platform/bsp/bsp_sensor/vcc30fx/lib_hr_vH102ed02_ZKLXRISCV32V2_NA_01.a" />
 			<Add library="../../platform/bsp/bsp_sensor/vcc30fx/lib_spo2_VC30FS_Int_ZhongKe5681_01.a" />
-			<Add library="../../platform/bsp/bsp_sensor/sc7a20/libSL_Watch_Pedo_Kcal_Wrist_Sleep_Sway_Algorithm.a" />
 			<Add library="../../../ute/lib/libute_all_sports_int_algorithms3_0.a" />
 			<Add library="../../../ute/lib/libUTEsleepOnBandLib.a" />
+			<Add library="../../../ute/drv/gsensor/libSL_Acc_Mtp_WR.a" />
 			<Add directory="../../platform/libs" />
 		</Linker>
 		<ExtraCommands>
