--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1252,6 +1252,12 @@
 		<Unit filename="functions/func_weather.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/test_mode/func_factory_testing_mode.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="functions/test_mode/func_test_mode.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="i18n/lang.c">
 			<Option compilerVar="CC" />
 		</Unit>
