添加SOS、出厂测试、老化测试功能

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1194,6 +1194,9 @@
 		<Unit filename="functions/func_setting_sub_sav.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_setting_sub_sos.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_setting_sub_time.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -1253,6 +1256,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="functions/test_mode/func_factory_testing_mode.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="functions/test_mode/func_test_ageing.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="functions/test_mode/func_test_mode.c">
