feat: 添加运动边菜单界面; 修复一级界面选择列表显示异常;

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1215,6 +1215,9 @@
 		<Unit filename="functions/func_sport_config.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_sport_sort.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_sport_sub_run.c">
 			<Option compilerVar="CC" />
 		</Unit>
