更新字库、更换图库、优化UI

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1173,6 +1173,9 @@
 		<Unit filename="functions/func_password_sub_select.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_power_on.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_pressure.c">
 			<Option compilerVar="CC" />
 		</Unit>
