fix:1、修正天方地圆一直转偶现蓝屏问题 2、修正天方地圆与其他样式切换导致的蓝屏问题 3、修正466工程下拉界面左右滑动蓝屏问题 4、修正菜单风格界面打开智能堆栈界面蓝屏问题 5、修正快捷界面进去智能堆栈界面蓝屏问题 6、添加修改晶振驱动电流接口

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,8 @@ app/projects/*/Output/bin/xcfg.h
 app/projects/*/Output/bin/res/*
 app/projects/*/Output/bin/Settings/*
 app/projects/*/Output/bin/ui/*
+app/projects/*/Output/bin/ui.bin
+app/projects/*/Output/bin/ui.h
+app/projects/*/ui.h
 app/projects/*/Output/bin/ute_ui_coord_file.h
 .vscode/*
