--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,5 @@ app/projects/*/Output/bin/res/*
 app/projects/*/Output/bin/Settings/*
 app/projects/*/Output/bin/ui/*
 app/projects/*/Output/bin/ute_ui_coord_file.h
+ute/language/defaultLanguage/*
 .vscode/*
