--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ app/projects/*/*.depend
 app/projects/*/Output/bin/app.bin
 app/projects/*/Output/bin/app.dcf
 app/projects/*/Output/bin/app.rv32
+app/projects/*/Output/bin/app.lst
 app/projects/*/Output/bin/map.txt
 app/projects/*/xcfg.h
 app/projects/*/Output/bin/xcfg.h
