--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -118,6 +118,7 @@
 			<Add before="python ..\..\..\ute\ui_config_patch\build_cpy_res.py" />
 			<Add before="Output\bin\prebuild.bat $(PROJECT_NAME)" />
 			<Add after="Output\bin\postbuild.bat $(PROJECT_NAME)" />
+			<Add after="Output\bin\objdump.bat $(PROJECT_NAME)" />
 		</ExtraCommands>
 		<Unit filename="../../../libs/gui/spiflash/spiflash.h" />
 		<Unit filename="../../../ute/application/ute_application_common.c">
