1、重写电池百分比计算

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1078,6 +1078,9 @@
 		<Unit filename="functions/func_disturd_config.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_empty.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_findphone.c">
 			<Option compilerVar="CC" />
 		</Unit>
