fix: 手表接收消息弹窗时，点击页面其他部分也会进入消息详情页面; 亮度调节页面按钮没有居中对齐显示;  运动中app发起遥控拍照，运动会直接退出，回到运动列表页面; 音乐、秒表、计时器后台运行，进入小组件查看时会先显示默认效果，延迟一会再刷新当前状态;  点击常用应用与最近应用间隔处会卡死; 手表音乐点击播放音乐会先闪一下置灰图标;

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -161,6 +161,15 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_ar_ril.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_de_rde.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_en_rus.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_fr_rfr.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_it_rit.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_ja_rjp.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_ru_rru.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_zh_rcn.h" />
+		<Unit filename="../../../ute/language/defaultLanguage/ute_multi_language_zh_rtw.h" />
 		<Unit filename="../../../ute/language/ute_language_common.c">
 			<Option compilerVar="CC" />
 		</Unit>
