--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -86,6 +86,7 @@
 			<Add directory="../../../ute/module/newFactoryTest" />
 			<Add directory="../../../ute/module/factorytest" />
 			<Add directory="../../../ute/module/micrecord" />
+			<Add directory="../../../ute/module/music" />
 		</Compiler>
 		<Linker>
 			<Add option="-T$(TARGET_OBJECT_DIR)ram.o" />
@@ -221,6 +222,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../../ute/module/micrecord/ute_module_micrecord.h" />
+		<Unit filename="../../../ute/module/music/ute_module_music.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/music/ute_module_music.h" />
 		<Unit filename="../../../ute/module/newFactoryTest/ute_module_newFactoryTest.c">
 			<Option compilerVar="CC" />
 		</Unit>
