--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1011,6 +1011,9 @@
 		<Unit filename="functions/func_breathe.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_breathe_finish.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_breathe_sub_mode.c">
 			<Option compilerVar="CC" />
 		</Unit>
