1、修改表盘卡路里超过3位数显示异常； 2、修改每日活动距离超过10km显示异常；3、增加spiclk设置宏

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,7 @@ app/projects/*/Output/bin/ui.h
 app/projects/*/ui.h
 app/projects/*/Output/bin/ute_ui_coord_file.h
 ute/language/defaultLanguage/*
+app/projects/*/Output/bin/res.bin
+app/projects/*/Output/bin/res.h
+app/projects/*/res.h
 .vscode/*
