--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1155,6 +1155,9 @@
 		<Unit filename="functions/func_menu_sub_football.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_menu_sub_football_list.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_menu_sub_grid.c">
 			<Option compilerVar="CC" />
 		</Unit>
