--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -278,6 +278,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../../ute/module/sleep/ute_module_sleep.h" />
+		<Unit filename="../../../ute/module/smoke/ute_module_smoke.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/smoke/ute_module_smoke.h" />
 		<Unit filename="../../../ute/module/sport/ute_module_sport.c">
 			<Option compilerVar="CC" />
 		</Unit>
