--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -1133,6 +1133,9 @@
 		<Unit filename="functions/func_game.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="functions/func_heart_warning.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_heartrate.c">
 			<Option compilerVar="CC" />
 		</Unit>
