1、更新平台库libplatform_S2678，解决通话中静音对方能听到响一声的问题

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -89,6 +89,7 @@
 			<Add directory="../../../ute/module/music" />
 			<Add directory="../../../ute/module/localRingtone" />
 			<Add directory="../../../ute/module/menstrualcycle" />
+			<Add directory="../../../ute/module/fifo" />
 		</Compiler>
 		<Linker>
 			<Add option="-T$(TARGET_OBJECT_DIR)ram.o" />
@@ -201,6 +202,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../../ute/module/factorytest/ute_module_factorytest.h" />
+		<Unit filename="../../../ute/module/fifo/ute_module_simple_fifo.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../../ute/module/fifo/ute_module_simple_fifo.h" />
 		<Unit filename="../../../ute/module/filesystem/ute_module_filesystem.c">
 			<Option compilerVar="CC" />
 		</Unit>
