--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -679,6 +679,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../platform/bsp/bsp_vbat.h" />
+		<Unit filename="../../platform/bsp/bsp_vddhr_trim.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../platform/bsp/bsp_vddhr_trim.h" />
 		<Unit filename="../../platform/gui/components/compo_animation.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -1086,6 +1090,12 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="functions/func_clock.h" />
+		<Unit filename="functions/func_clock_butterfly.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="functions/func_clock_cube.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="functions/func_clock_preview.c">
 			<Option compilerVar="CC" />
 		</Unit>
