1、增加绑定相关逻辑，未完善，暂不使用

--- a/app/projects/watch240/app.cbp
+++ b/app/projects/watch240/app.cbp
@@ -91,6 +91,7 @@
 			<Add directory="../../../ute/module/menstrualcycle" />
 			<Add directory="../../../ute/module/fifo" />
 			<Add directory="../../../ute/module/slideBar" />
+			<Add directory="../../../ute/module/appbinding" />
 		</Compiler>
 		<Linker>
 			<Add option="-T$(TARGET_OBJECT_DIR)ram.o" />
@@ -183,6 +184,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../../ute/language/ute_language_common.h" />
+		<Unit filename="../../../ute/module/appbinding/ute_module_appbinding.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../../../ute/module/bloodoxygen/ute_module_bloodoxygen.c">
 			<Option compilerVar="CC" />
 		</Unit>
